vac-rs/crates/surfaces/tui/src/history_cell/snapshots/vac_tui__history_cell__tests__mcp_inventory_loading_snapshot.snap
---
source: crates/surfaces/tui/src/history_cell/split_006_finalmessageseparator.rs.inc
assertion_line: 1072
expression: rendered
---
• Loading MCP inventory…
