vac-rs/crates/surfaces/tui/src/history_cell/snapshots/vac_tui__history_cell__tests__mcp_tools_output_from_statuses_renders_status_only_servers.snap
---
source: crates/surfaces/tui/src/history_cell/split_006_finalmessageseparator.rs.inc
assertion_line: 778
expression: rendered
---
/mcp

🔌  MCP Tools

  • plugin_docs
    • Auth: Unsupported
    • Command: docs-server --stdio
    • Tools: lookup
