vac-rs/crates/surfaces/tui/src/history_cell/snapshots/vac_tui__history_cell__tests__mcp_tools_output_from_statuses_renders_verbose_inventory.snap
---
source: crates/surfaces/tui/src/history_cell/split_006_finalmessageseparator.rs.inc
assertion_line: 833
expression: rendered
---
/mcp

🔌  MCP Tools

  • plugin_docs
    • Status: enabled
    • Auth: Unsupported
    • Command: docs-server --stdio
    • Tools: lookup
    • Resources: Docs (file:///docs)
    • Resource templates: Doc Template (file:///docs/{id})
