vac-rs/crates/surfaces/tui/src/history_cell/snapshots/vac_tui__history_cell__tests__multiline_command_both_lines_wrap_with_correct_prefixes.snap
---
source: crates/surfaces/tui/src/history_cell/split_006_finalmessageseparator.rs.inc
assertion_line: 1715
expression: rendered
---
• Ran first_token_is_long_en
  │ ough_to_wrap
  │ second_token_is_also_lon
  │ … +1 lines
  └ (no output)
