vac-rs/crates/surfaces/tui/src/history_cell/snapshots/vac_tui__history_cell__tests__multiline_command_without_wrap_uses_branch_then_eight_spaces.snap
---
source: crates/surfaces/tui/src/history_cell/split_006_finalmessageseparator.rs.inc
assertion_line: 1691
expression: rendered
---
• Ran echo one
  │ echo two
  └ (no output)
