vac-rs/crates/surfaces/tui/src/history_cell/snapshots/vac_tui__history_cell__tests__multiline_command_wraps_with_extra_indent_on_subsequent_lines.snap
---
source: crates/surfaces/tui/src/history_cell/split_006_finalmessageseparator.rs.inc
assertion_line: 1622
expression: rendered
---
• Ran set -o pipefail
  │ cargo test -p
  │ vac-surface-tui --quiet
  └ (no output)
