vac-rs/crates/surfaces/tui/src/history_cell/snapshots/vac_tui__history_cell__tests__plan_update_without_note_snapshot.snap
---
source: crates/surfaces/tui/src/history_cell/split_006_finalmessageseparator.rs.inc
assertion_line: 2044
expression: rendered
---
• Updated Plan
  └ □ Define error taxonomy
    □ Implement mapping to user messages
