vac-rs/crates/surfaces/tui/src/history_cell/snapshots/vac_tui__history_cell__tests__ps_output_chunk_leading_whitespace_snapshot.snap
---
source: crates/surfaces/tui/src/history_cell/split_006_finalmessageseparator.rs.inc
assertion_line: 619
expression: rendered
---
/ps

Background terminals

  • just fix
    ↳   indented first
          more indented
